--- a/index.css
+++ b/index.css
@@ -1,27 +1,27 @@
-
 /* Estilo Geral */
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Poppins', sans-seri f;
-
+    font-family: 'Poppins', sans-serif;
 }
-body{
-    background-color: black;
+
+body {
+    background-color: white; /* Fundo branco */
+    color: black; /* Texto preto */
     height: 100vh;
 }
 
-.interface{
+.interface {
     max-width: 1280px;
     margin: 0 auto;
 }
 
-.flex{
+.flex {
     display: flex;
 }
 
-.btn-contato button{
+.btn-contato button {
     padding: 10px 40px;
     font-size: 18px;
     font-weight: 600;
@@ -29,149 +29,151 @@ body{
     border: 0;
     border-radius: 30px;
     cursor: pointer;
+    color: white; /* Texto branco no botão */
 }
 
-.btn-contato button:hover{
+.btn-contato button:hover {
     box-shadow: 0px 0px 8px rgb(45, 45, 248);
     transition: .2s;
 }
 
-h2.titulo{
-    color: white;
+h2.titulo {
+    color: black; /* Texto preto */
     font-size: 38px;
     text-align: center;
 }
 
-h2.titulo span{
+h2.titulo span {
     color: blue;
 }
 
-button:hover, form .btn-enviar input[type=submit]:hover{
+button:hover, form .btn-enviar input[type=submit]:hover {
     box-shadow: 0px 0px 8px rgb(45, 45, 248);
     transform: scale(1.05);
     transition: .2s;
 }
 
-
-html{
+html {
     scroll-behavior: smooth;
 }
 
 /* Estilo do cabeçalho */
-header{
+header {
     padding: 100px 4%;
 }
 
-header > .interface{
+header > .interface {
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 
-header a{
-    color: gray;
+header a {
+    color: black; /* Texto preto */
     text-decoration: none;
     display: inline-block;
 }
 
-header a:hover{
-    color: white;
+header a:hover {
+    color: blue;
     transform: scale(1.05);
     transition: .2s;
 }
 
-header nav ul{
+header nav ul {
     list-style-type: none;
 }
 
-header nav ul li{
+header nav ul li {
     display: inline-block;
     padding: 0 40px;
 }
 
 /* topo do site */
-section.topo-do-site{
+section.topo-do-site {
     padding: 100px 4%;
 }
 
-section.topo-do-site .flex{
+section.topo-do-site .flex {
     align-items: center;
     justify-content: center;
     gap: 90px;
 }
 
-.topo-do-site h1{
-    color: white;
+.topo-do-site h1 {
+    color: black; /* Texto preto */
     font-size: 40px;
     line-height: 40px;
 }
 
-.topo-do-site p{
-    color: white;
+.topo-do-site p {
+    color: black; /* Texto preto */
     margin: 40px 0;
 }
 
 /* Skills */
-section.especialidades{
+section.especialidades {
     padding: 100px 4%;
 }
 
-section.especialidades .flex{
+section.especialidades .flex {
     gap: 60px;
 }
 
-.especialidades .especialidades-box{
-    color: white;
+.especialidades .especialidades-box {
+    color: black; /* Texto preto */
     padding: 40px;
     border-radius: 25px;
     margin-top: 45px;
+    background-color: #f0f0f0; /* Fundo das caixas */
 }
 
-.especialidades .especialidades-box:hover{
+.especialidades .especialidades-box:hover {
     transform: scale(1.05);
     box-shadow: 0 0 8px gray;
     transition: .2s;
 }
 
-.especialidades .especialidades-box i{
+.especialidades .especialidades-box i {
     font-size: 70px;
     color: blue;
     gap: 40px;
 }
 
-.especialidades .especialidades-box h3{
+.especialidades .especialidades-box h3 {
     font-size: 28px;
     margin: 15px 0px;
 }
 
 /* Estilo sobre */
-section.sobre{
+section.sobre {
     padding: 200px 4%;
 }
 
-section.sobre .flex{
+section.sobre .flex {
     align-items: center;
     gap: 60px;
 }
 
-.sobre .txt-sobre{
-    color: white;
+.sobre .txt-sobre {
+    color: black;
 }
 
-.sobre .txt-sobre h2{
+.sobre .txt-sobre h2 {
     font-size: 40px;
     margin-bottom: 30px;
 }
 
-.sobre .txt-sobre h2 span{
+.sobre .txt-sobre h2 span {
     color: blue;
 }
 
-.sobre .txt-sobre p{
+.sobre .txt-sobre p {
     margin: 20px 0;
+    margin-bottom: 30px;
 }
 
-.sobre .txt-sobre .btn-social button{
+.sobre .txt-sobre .btn-social button {
     width: 60px;
     height: 60px;
     border-radius: 50%;
@@ -180,60 +182,62 @@ section.sobre .flex{
     font-size: 22px;
     cursor: pointer;
     margin: 0 5px;
+    color: white;
 }
 
 /* Projetos */
-section.portifolio{
+section.portifolio {
     padding: 100px 4%;
 }
 
-section.portifolio .flex{
+section.portifolio .flex {
     gap: 60px;
 }
 
-.portifolio .portifolio-box{
-    color: white;
+.portifolio .portifolio-box {
+    color: black; /* Texto preto */
     padding: 40px;
     border-radius: 25px;
     margin-top: 45px;
+    background-color: #f0f0f0; /* Fundo das caixas */
 }
 
-.portifolio .portifolio-box:hover{
+.portifolio .portifolio-box:hover {
     transform: scale(1.05);
     box-shadow: 0 0 8px gray;
     transition: .2s;
 }
 
-.portifolio .portifolio-box i{
+.portifolio .portifolio-box i {
     font-size: 70px;
     color: blue;
     gap: 40px;
 }
 
-.portifolio .portifolio-box h3{
+.portifolio .portifolio-box h3 {
     font-size: 28px;
     margin: 15px 0px;
 }
 
-section.portifolio{
+section.portifolio {
     padding: 200px 4%;
     box-shadow: 0 0 40px 10px rgba(128, 128, 128, 0.301);
 }
 
-section.portifolio .interface h2{
+section.portifolio .interface h2 {
     margin-bottom: 40px;
 }
 
-section.portifolio .interface p{
-    color: white;
+section.portifolio .interface p {
+    color: black; /* Texto preto */
 }
 
 /* formulario */
-section.formulario{
+section.formulario {
     padding: 200px 4%;
 }
 
-form{
+form {
     max-width: 500px;
     margin: 0 auto;
     display: flex;
@@ -243,58 +247,129 @@ form{
     margin-top: 40px;
 }
 
-form input, form textarea{
+form input, form textarea {
     width: 100%;
-    background-color: #242424;
+    background-color: #e0e0e0; /* Fundo dos campos */
     border: none;
     outline: 0;
     padding: 20px 15px;
     border-radius: 15px;
-    color: white;
+    color: black; /* Texto preto */
     font-size: 18px;
 }
 
-form textarea{
+form textarea {
     resize: none;
     max-height: 200px;
 }
 
-form .btn-enviar{
+form .btn-enviar {
     margin-top: 20px;
     text-align: center;
 }
 
-form .btn-enviar input[type=submit]{
+form .btn-enviar input[type=submit] {
     width: 120px;
     cursor: pointer;
     background-color: blue;
-    color: black;
+    color: white; /* Texto branco no botão */
     font-weight: 700;
 }
 
-@media screen and (max-width: 1020px){
+/* Ajustes para dispositivos móveis */
+@media screen and (max-width: 768px) {
     /* classes gerais */
-    .flex{
+    .flex {
         flex-direction: column;
     }
 
-    .topo-do-site .flex{
+    .topo-do-site .flex {
         flex-direction: column-reverse;
+        align-items: center;
+        text-align: center;
     }
 
     /* cabeçalho */
-    .menu-desktop, .btn-contato{
-        display: none;
+    header {
+        padding: 50px 2%;
+    }
+
+    header > .interface {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    header nav ul {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    header nav ul li {
+        padding: 10px 0;
+    }
+
+    .btn-contato {
+        margin-top: 20px;
     }
 
     /* topo do site */
-    .topo-do-site h1{
+    .topo-do-site h1 {
         font-size: 30px;
     }
 
-    .topo-do-site .img-topo-do-site img{
+    .topo-do-site .img-topo-site img {
         width: 80%;
+        max-width: 300px;
     }
 
+    /* Skills */
+    section.especialidades .flex {
+        flex-direction: column;
+        gap: 30px;
+    }
 
+    /* Sobre */
+    section.sobre {
+        padding: 100px 4%;
+    }
+
+    section.sobre .flex {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+
+    .sobre .txt-sobre h2 {
+        font-size: 30px;
+    }
+
+    .sobre .txt-sobre .btn-social button {
+        width: 50px;
+        height: 50px;
+        font-size: 18px;
+    }
+
+    /* Projetos */
+    section.portifolio {
+        padding: 100px 4%;
+    }
+
+    section.portifolio .flex {
+        flex-direction: column;
+        gap: 30px;
+    }
+
+    /* Formulário */
+    section.formulario {
+        padding: 50px 4%;
+    }
+
+    form {
+        max-width: 100%;
+    }
+
+    form .btn-enviar input[type=submit] {
+        width: 100%;
+    }
 }
